recursion.cons.lessons.recursion.cons.Min.scala.error
min:9: error: value lambda is not a member of Int
possible cause: maybe a semicolon is missing before `value lambda'?
	}lambda(l.tail,l.head)
         ^min:10: error: type mismatch;
 found   : Unit
 required: Int
}
^