recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
	def lambda(l:List[Int], v:Int): Int= {
		if(l==Nil) 
		return v
		if(l.head >v)
		lambda(l.tail,v)
		else
		lambda(l.tail,l.head)
	}lambda(l.tail,l.head)
}
